Finished detail fragment, put strings in strings.xml

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:text="Check Out"
+            android:text="@string/check_out"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -96,7 +96,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="5dp"
-                    android:text="Delivery location"
+                    android:text="@string/delivery_location"
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -139,7 +139,7 @@
                     android:layout_marginEnd="120dp"
                     android:layout_marginBottom="16dp"
                     android:background="@drawable/checkout_button_background"
-                    android:text="Place the order"
+                    android:text="@string/place_the_order"
                     app:backgroundTint="@color/mainColor"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -213,7 +213,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="It's so cold and lonely here..."
+        android:text="@string/it_s_so_cold_and_lonely_here"
         android:textColor="@color/mainTextColor"
         app:layout_constraintEnd_toEndOf="@+id/sadImageView"
         app:layout_constraintStart_toStartOf="@+id/sadImageView"
