--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="Sign Up"
+        android:text="@string/sign_up"
         android:textColor="@color/mainTextColor"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -36,7 +36,7 @@
             android:id="@+id/usernameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Username" />
+            android:hint="@string/username" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -56,7 +56,7 @@
             android:id="@+id/emailEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email" />
+            android:hint="@string/email" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -77,7 +77,7 @@
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -89,7 +89,7 @@
 
         android:layout_marginTop="32dp"
         android:layout_marginEnd="100dp"
-        android:text="Sign Up"
+        android:text="@string/sign_up"
         android:textColor="@color/white"
         app:backgroundTint="@color/mainColor"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Already have an account?"
+        android:text="@string/already_have_an_account"
         android:textColor="@color/mainTextColor"
         app:layout_constraintEnd_toEndOf="@+id/signupButton"
         app:layout_constraintStart_toStartOf="@+id/signupButton"
