--- a/app/src/main/res/layout/order_received_dialog.xml
+++ b/app/src/main/res/layout/order_received_dialog.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
-        android:text="Order received!"
+        android:text="@string/order_received"
         android:textColor="@color/mainTextColor"
         android:textSize="18sp"
         android:gravity="center"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text=" It will arrive at your delivery location in 20-30 min!"
+        android:text="@string/it_will_arrive_at_your_delivery_location_in_20_30_min"
         android:textColor="@color/mainTextColor"
         android:textSize="15sp"
         android:gravity="center"
